# yt-video-metadata

./: .gitignore  app.py  app_lite.py  main.py  pyproject.toml  youtube_fetcher_app.py  yt-vid-metadata.ipynb
.devcontainer/: devcontainer.json
